todo display whitespace fix
currently an item data stored with multiple whitespace in-between words is rendered as having only one space. putting css `white-space: pre` fixes this.

--- a/assets/base.css
+++ b/assets/base.css
@@ -238,6 +238,7 @@ label[for='toggle-all'] {
 }
 
 #todo-list li label {
+	white-space: pre;
 	word-break: break-word;
 	padding: 15px;
 	margin-left: 45px;
